update about us banner and tasty-food menu

--- a/aboutus.html
+++ b/aboutus.html
@@ -199,9 +199,7 @@
     <!-- 加入我們 開始 -->
     <article class="joinus">
         <!-- <h3 class="joinus-title">JOIN US</h3> -->
-        <div class="pic">
-            <img src="./images/about_joinus.jpeg" alt="MIU Team">
-        </div>
+        <img src="./images/about_joinus.jpeg" alt="MIU Team" class="pic">
         <div class="txt">
             <h4>加入我們，成就精釀啤酒的熱情與創意！</h4>
             <p>
@@ -216,6 +214,11 @@
                 此外，你還可以享受彼此之間的友善關係、自由發揮創意的空間，以及成就感的滿足。
                 加入我們，成為這個充滿激情的 MIU BEER 大家庭的一員。<br>
                 讓我們攜手共同打造令人驚喜的啤酒體驗，帶給顧客一場美好的時光！
+            </p>
+            <p>
+                意者請盡速撥打電話面談，誠摯邀請您<br>
+                貓皇店 03-6666-9466,
+                貓后店 03-6666-5966
             </p>
             <div class="contactus"></div>
         </div>
