update classic-beer RWD

--- a/aboutus.html
+++ b/aboutus.html
@@ -216,9 +216,7 @@
                 讓我們攜手共同打造令人驚喜的啤酒體驗，帶給顧客一場美好的時光！
             </p>
             <p>
-                意者請盡速撥打電話面談，誠摯邀請您<br>
-                貓皇店 03-6666-9466,
-                貓后店 03-6666-5966
+                意者請盡速撥打電話面談，誠摯邀請您 03-9420-9420
             </p>
             <div class="contactus"></div>
         </div>
