--- a/index.html
+++ b/index.html
@@ -173,16 +173,14 @@
 
     <!-- 釀酒廠介紹開始 -->
     <article class="brewery">
-        <div class="pic">
-            <img src="./images/index_brewery.jpeg" alt="MIU釀酒廠">
-        </div>
+        <img src="./images/index_brewery.jpeg" alt="MIU釀酒廠" class="pic">
         <div class="txt">
             <h2>關於MIU釀酒廠...</h2>
             <p>釀酒是我們的藝術，獨特的風味是我們的靈感源泉。
                 我們將每一滴酒釀都視為對品味的極致追求，每一道工藝都體現著我們的匠心精神。
             </p>
-            <!-- <p>我們的釀酒師是這片土地上的藝術家，他們擁有豐富的經驗與熱情，以最嚴謹的工藝，用心釀造每一款啤酒。在這個神奇的酒窖裡，您可以感受釀酒的魔法，嗅到芬芳的香氣，品嚐無與倫比的風味。</p>
-            <p>我們的釀酒廠是一個開放的聖殿，您可以近距離觀賞釀酒的全過程，親身感受釀酒師的用心與技藝。無論您是啤酒愛好者、釀酒新手，還是尋找不一樣味覺體驗的冒險家，這裡都將成為您的啤酒天堂。</p> -->
+            <p>我們的釀酒師是這片土地上的藝術家，他們擁有豐富的經驗與熱情，以最嚴謹的工藝，用心釀造每一款啤酒。在這個神奇的酒窖裡，您可以感受釀酒的魔法，嗅到芬芳的香氣，品嚐無與倫比的風味。</p>
+            <p>我們的釀酒廠是一個開放的聖殿，您可以近距離觀賞釀酒的全過程，親身感受釀酒師的用心與技藝。無論您是啤酒愛好者、釀酒新手，還是尋找不一樣味覺體驗的冒險家，這裡都將成為您的啤酒天堂。</p>
             <p>在MIU BEER，我們秉持著對品質的堅持，對創意的追求，用心釀造屬於這片土地的獨一無二的啤酒。我們誠摯地邀請您踏進這個充滿激情的釀酒世界，一同探索啤酒的無限可能性！</p>
             <p>讓我們一起舉杯，共享這美好的釀酒之旅！</p>
             <div class="link">
