update shopping-cart jQuery and adjust all button style

--- a/booking.html
+++ b/booking.html
@@ -173,7 +173,7 @@
                         placeholder="有任何需求嗎?可以先寫在這裡哦! (例如:行動不便、過敏)"></textarea>
                 </label>
             </div>
-            <button><span>確認提交</span></button>
+            <button><span>確認送出</span></button>
         </form>
     </article>
     <!-- 地址表單區結束 -->
