--- a/shopping-cart.html
+++ b/shopping-cart.html
@@ -14,6 +14,8 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <!-- favicon -->
     <link rel="shortcut icon" href="./images/miu.ico" />
+    <!-- jQuery cdn -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.0/jquery.min.js"></script>
 </head>
 
 <body>
@@ -109,10 +111,11 @@
                 </h2>
                 <div class="order-btn">
                     <i class="fa-solid fa-circle-minus"></i>
-                    <p class="count">1</p>
+                    <input class="count" type="text" value="1">
                     <i class="fa-solid fa-circle-plus"></i>
                     <i class="fa-solid fa-dollar-sign">990</i>
                     <i class="fa-solid fa-trash-can"></i>
+                    <span>990</span>
                 </div>
             </div>
             <div class="pic">
@@ -127,10 +130,11 @@
                 </h2>
                 <div class="order-btn">
                     <i class="fa-solid fa-circle-minus"></i>
-                    <p class="count">1</p>
+                    <input class="count" type="text" value="1">
                     <i class="fa-solid fa-circle-plus"></i>
                     <i class="fa-solid fa-dollar-sign">580</i>
                     <i class="fa-solid fa-trash-can"></i>
+                    <span>580</span>
                 </div>
             </div>
             <div class="pic">
@@ -145,13 +149,14 @@
                 </h2>
                 <div class="order-btn">
                     <i class="fa-solid fa-circle-minus"></i>
-                    <p class="count">1</p>
+                    <input class="count" type="txt" value="1">
                     <i class="fa-solid fa-circle-plus"></i>
                     <i class="fa-solid fa-dollar-sign">620</i>
                     <i class="fa-solid fa-trash-can"></i>
+                    <span>620</span>
                 </div>
             </div>
-            <span class="total">總金額:2190元
+            <span class="total">總金額:<span>2190</span>元
             </span>
         </div>
         <form action="#" target="_self">
@@ -269,6 +274,7 @@
         </div>
     </div>
     <!-- footer結束 -->
+    <script src="./js/shopping-cart.js"></script>
 </body>
 
 </html>
