--- a/takeout.html
+++ b/takeout.html
@@ -16,7 +16,6 @@
     <link rel="shortcut icon" href="./images/miu.ico" />
     <!-- jQuery cdn -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.7.0/jquery.min.js"></script>
-    <script src="./js/takeout.js"></script>
 </head>
 
 <body>
@@ -130,7 +129,7 @@
                 </div>
                 <div class="count">
                     <i class="fa-solid fa-circle-minus"></i>
-                    <span>0</span>
+                    <input class="selectbox" type="text" value="0">
                     <i class="fa-solid fa-circle-plus"></i>
                 </div>
             </div>
@@ -149,7 +148,7 @@
                 </div>
                 <div class="count">
                     <i class="fa-solid fa-circle-minus"></i>
-                    <span>0</span>
+                    <input class="selectbox" type="text" value="0">
                     <i class="fa-solid fa-circle-plus"></i>
                 </div>
             </div>
@@ -168,7 +167,7 @@
                 </div>
                 <div class="count">
                     <i class="fa-solid fa-circle-minus"></i>
-                    <span>0</span>
+                    <input class="selectbox" type="text" value="0">
                     <i class="fa-solid fa-circle-plus"></i>
                 </div>
             </div>
@@ -187,7 +186,7 @@
                 </div>
                 <div class="count">
                     <i class="fa-solid fa-circle-minus"></i>
-                    <span>0</span>
+                    <input class="selectbox" type="text" value="0">
                     <i class="fa-solid fa-circle-plus"></i>
                 </div>
             </div>
@@ -206,7 +205,7 @@
                 </div>
                 <div class="count">
                     <i class="fa-solid fa-circle-minus"></i>
-                    <span>0</span>
+                    <input class="selectbox" type="text" value="0">
                     <i class="fa-solid fa-circle-plus"></i>
                 </div>
             </div>
@@ -225,7 +224,7 @@
                 </div>
                 <div class="count">
                     <i class="fa-solid fa-circle-minus"></i>
-                    <span>0</span>
+                    <input class="selectbox" type="text" value="0">
                     <i class="fa-solid fa-circle-plus"></i>
                 </div>
             </div>
@@ -244,7 +243,7 @@
                 </div>
                 <div class="count">
                     <i class="fa-solid fa-circle-minus"></i>
-                    <span>0</span>
+                    <input class="selectbox" type="text" value="0">
                     <i class="fa-solid fa-circle-plus"></i>
                 </div>
             </div>
@@ -263,7 +262,7 @@
                 </div>
                 <div class="count">
                     <i class="fa-solid fa-circle-minus"></i>
-                    <span>0</span>
+                    <input class="selectbox" type="text" value="0">
                     <i class="fa-solid fa-circle-plus"></i>
                 </div>
             </div>
@@ -282,7 +281,7 @@
                 </div>
                 <div class="count">
                     <i class="fa-solid fa-circle-minus"></i>
-                    <span>0</span>
+                    <input class="selectbox" type="text" value="0">
                     <i class="fa-solid fa-circle-plus"></i>
                 </div>
             </div>
@@ -301,7 +300,7 @@
                 </div>
                 <div class="count">
                     <i class="fa-solid fa-circle-minus"></i>
-                    <span>0</span>
+                    <input class="selectbox" type="text" value="0">
                     <i class="fa-solid fa-circle-plus"></i>
                 </div>
             </div>
@@ -320,7 +319,7 @@
                 </div>
                 <div class="count">
                     <i class="fa-solid fa-circle-minus"></i>
-                    <span>0</span>
+                    <input class="selectbox" type="text" value="0">
                     <i class="fa-solid fa-circle-plus"></i>
                 </div>
             </div>
@@ -339,7 +338,7 @@
                 </div>
                 <div class="count">
                     <i class="fa-solid fa-circle-minus"></i>
-                    <span>0</span>
+                    <input class="selectbox" type="text" value="0">
                     <i class="fa-solid fa-circle-plus"></i>
                 </div>
             </div>
@@ -402,6 +401,7 @@
         </div>
     </div>
     <!-- footer結束 -->
+    <script src="./js/takeout.js"></script>
 </body>
 
 </html>
