update index news

--- a/aboutus.html
+++ b/aboutus.html
@@ -95,7 +95,8 @@
     <!-- 立即訂位結束 -->
     <!-- 上半部開始 -->
     <div class="movie">
-        <video src="./images/about_movie.mp4" autoplay loop muted type="video/mp4"></video>
+        <video src="./images/about_movie.mp4" autoplay loop muted type="video/mp4" controls
+            controlsList="nodownload"></video>
     </div>
     <section class="container">
         <div class="slogn">
