--- a/index.html
+++ b/index.html
@@ -105,11 +105,16 @@
         <p>店長Miumiu上班時間:週一至週五 15:00~20:00 微服出巡，喜愛貓咪的您不要錯過囉！</p>
     </div>
     <!----------- 首頁_banner&跑馬燈結束 ---------->
-    <!-- 活動卡片區開始 -->
-    <div class="news">
-        <h1>此區塊籌備中</h1>
-    </div>
-
+    <!-- news開始 -->
+    <section class="news">
+        <h1>品牌快訊</h1>
+        <ul>
+            <li>全新啤酒推出<i class="fa-solid fa-check"></i><br>
+            </li>
+            <li>限定季節啤酒<i class="fa-solid fa-check"></i><br></li>
+            <li>最新品牌合作<i class="fa-solid fa-check"></i><br></li>
+        </ul>
+    </section>
     <!-- 首頁影片區 -->
     <div class="draft-beer">
         <h2>精釀．工藝</h2>
@@ -119,58 +124,30 @@
     </div>
     <!-- 首頁影片區結束 -->
 
-    <!-- 食物卡片區開始 -->
-    <div class="food">
-        <h2>此區塊籌備中</h2>
-    </div>
-    <!--  <div class="food-card-container">
-        <div class="food-card">
-            <a href="./food.html">
-                <div class="card-pic">
-                    <img src="./images/index_potato.png" alt="">
-                </div>
-                <div class="card-txt">
-                    <h2>
-                        別人搶不走的，<br>唯有吃進肚子裡的食物！
-                    </h2>
-                </div>
-                <div class="tag">
-                    #芥藍炒肉末佐台灣地瓜
-                </div>
+    <!-- 貓咪區開始 -->
+    <section class="cats">
+        <h2>喵啤．貓貓</h2>
+        <div class="catheadshot">
+            <div class="pic">
+                <img src="./images/index_cat_yellow.png" alt="店貓灰灰">
+                <h3>灰灰</h3>
+                <p>上班時間: 12:00 ~ 18:00</p>
+                <p>我喜歡小魚乾、貓草</p>
+            </div>
+            <div class="pic">
+                <img src="./images/index_cat_pink.png" alt="店貓粉粉">
+                <h3>粉粉</h3>
+                <p>上班時間: 15:00 ~ 20:00</p>
+                <p>我喜歡罐罐、帥哥</p>
+            </div>
+            <div class="pic">
+                <img src="./images/index_cat_orange.png" alt="店貓橘橘">
+                <h3>橘橘</h3>
+                <p>上班時間: 14:00 ~ 21:00</p>
+                <p>喜歡...? 我討厭旁邊這兩隻貓</p>
+            </div>
         </div>
-        </a>
-        <div class="food-card">
-            <a href="./food.html">
-                <div class="card-pic">
-                    <img src="./images/index_greenchicken.png" alt="">
-                </div>
-                <div class="card-txt">
-                    </h2>
-                    即便一無所有，<br>也不能沒有胃口。
-                    </h2>
-                </div>
-                <div class="tag">
-                    #香烤雞胸蔬菜
-                </div>
-            </a>
-        </div>
-        <div class="food-card">
-            <a href="./food.html">
-                <div class="card-pic">
-                    <img src="./images/index_fish.png" alt="">
-                </div>
-                <div class="card-txt">
-                    </h2>
-                    愛吃的人運氣都不會太差，<br>因為「食來運轉」！
-                    </h2>
-                </div>
-                <div class="tag">
-                    #花椰菜米佐鮭魚排
-                </div>
-        </div>
-    </div>-->
-    <!-- 食物卡片區結束 -->
-
+    </section>
     <!-- 釀酒廠介紹開始 -->
     <article class="brewery">
         <img src="./images/index_brewery.jpeg" alt="MIU釀酒廠" class="pic">
@@ -192,7 +169,6 @@
         </div>
     </article>
     <!-- 釀酒廠介紹結束 -->
-
     <!-- 好評推薦區 -->
     <div class="feedback">
         <h2>MIU 好評推薦</h2>
