--- a/takeout.html
+++ b/takeout.html
@@ -96,10 +96,9 @@
     <!-- 中間公告區&Banner開始 -->
     <div id="sliderBoard">
         <ul id="content">
-            <!-- <li><img src="./images/takeout_banner_test.jpeg" class="image" alt="朋友聚會首選"></li> -->
-            <li><img src="./images/takeout_banner_staff.jpeg" class="image" alt="親切服務生"></li>
-            <li><img src="./images/takeout_banner_hb.jpeg" class="image" alt="招牌漢堡"></li>
-            <li><img src="./images/takeout_banner_friends.jpeg" class="image" alt="朋友聚會首選"></li>
+            <li><img src="./images/takeout_banner_miu.png" class="image" alt="店貓MiuMiu"></li>
+            <li><img src="./images/takeout_banner_kao.png" class="image" alt="店貓年糕"></li>
+            <li><img src="./images/takeout_banner_fin.png" class="image" alt="店貓冬粉"></li>
         </ul>
     </div>
     <ul id="contentButton">
