update index & about us jQuery

--- a/aboutus.html
+++ b/aboutus.html
@@ -98,7 +98,7 @@
         <video src="./images/about_movie.mp4" autoplay loop muted type="video/mp4" controls
             controlsList="nodownload"></video>
     </div>
-    <section class="container">
+    <section class="container area">
         <div class="slogn">
             <div class="txt">
                 <h1>
@@ -138,13 +138,13 @@
     </section>
     <!-- 上半部結束 -->
     <!-- 啤酒分隔線 -->
-    <div class="little"></div>
+    <div class="little area"></div>
     <!-- 時間線開始 -->
     <section class="ourstory">
-        <h3 class="ourstory-title">OUR STORY</h3>
+        <h3 class="ourstory-title area">OUR STORY</h3>
         <div class="timeline-box">
-            <ul class="timeline">
-                <li class="event spring">
+            <ul class="timeline area">
+                <li class="event spring ">
                     <h4>MIU BEER 誕生</h4>
                     <p>熱情與創意交織，誕生了 MIU BEER 的獨特魅力，於2021年04月開幕！</p>
                 </li>
@@ -168,7 +168,7 @@
         </div>
     </section>
     <!-- 經營區開始 -->
-    <section class="owned">
+    <section class="owned area">
         <h3>FAMILY OWNED & OPERATED</h3>
         <div class="owned-card">
             <div class="pic" id="andy" data-text="創辦人第二代Andy，力求做到最好，不讓家人失望">
@@ -201,7 +201,7 @@
     <article class="joinus">
         <!-- <h3 class="joinus-title">JOIN US</h3> -->
         <img src="./images/about_joinus.jpeg" alt="MIU Team" class="pic">
-        <div class="txt">
+        <div class="txt area">
             <h4>加入我們，成就精釀啤酒的熱情與創意！</h4>
             <p>
                 我們致力於創造獨特的精釀啤酒體驗，提供最優質的服務給每一位顧客。
@@ -219,7 +219,6 @@
             <p>
                 意者請盡速撥打電話面談，誠摯邀請您 03-9420-9420
             </p>
-            <div class="contactus"></div>
         </div>
     </article>
     <!-- footer開始 -->
