--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
     </div>
     <!----------- 首頁_banner&跑馬燈結束 ---------->
     <!-- news開始 -->
-    <section class="news">
+    <section class="news area">
         <h1>品牌快訊</h1>
         <ul>
             <li>全新啤酒推出<i class="fa-solid fa-check"></i><br>
@@ -116,7 +116,7 @@
         </ul>
     </section>
     <!-- 首頁影片區 -->
-    <div class="draft-beer">
+    <div class="draft-beer area">
         <h2>精釀．工藝</h2>
     </div>
     <div class="draft-beer-video">
@@ -125,7 +125,7 @@
     <!-- 首頁影片區結束 -->
 
     <!-- 貓咪區開始 -->
-    <section class="cats">
+    <section class="cats area">
         <h2>喵啤．貓貓</h2>
         <div class="catheadshot">
             <div class="pic">
@@ -151,7 +151,7 @@
     <!-- 釀酒廠介紹開始 -->
     <article class="brewery">
         <img src="./images/index_brewery.jpeg" alt="MIU釀酒廠" class="pic">
-        <div class="txt">
+        <div class="txt area">
             <h2>關於MIU釀酒廠...</h2>
             <p>釀酒是我們的藝術，獨特的風味是我們的靈感源泉。
                 我們將每一滴酒釀都視為對品味的極致追求，每一道工藝都體現著我們的匠心精神。
@@ -170,10 +170,10 @@
     </article>
     <!-- 釀酒廠介紹結束 -->
     <!-- 好評推薦區 -->
-    <div class="feedback">
+    <div class="feedback area">
         <h2>MIU 好評推薦</h2>
     </div>
-    <div class="sliderBoard">
+    <div class="sliderBoard area">
         <ul class="feedback-container">
             <li class="feedback-card">
                 <div class="pic">
