fixed news title RWD

--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
     <div class="draft-beer area">
         <h2>精釀．工藝</h2>
     </div>
-    <div class="draft-beer-video">
+    <div class="draft-beer-video area">
         <video src="./images/movie-beer.mp4" autoplay loop muted controls width="700"></video>
     </div>
     <!-- 首頁影片區結束 -->
