fixed news again

--- a/news.html
+++ b/news.html
@@ -101,98 +101,86 @@
     <!-- 內文區開始 -->
     <div class="news-card-container">
         <div class="news-card">
-            <a href="#">
-                <img src="./images/news_cup.png" alt="上班族小確幸">
-                <span>
-                    上班族小確幸！平日午餐來店
-                    享小杯啤酒任選一杯，聚會首選 Miu Beer！
-                </span>
-                <span>
-                    感受上班的愜意時光，平日午餐特惠來襲！<br>
-                    只要來用餐即贈小杯啤酒不限口味一杯 🍺
-                    趕快撥打電話訂位<br>
-                    貓皇店 03-6666-9466<br>
-                    貓后店 03-6666-5966
-                </span>
-            </a>
+            <img src="./images/news_cup.png" alt="上班族小確幸">
+            <span class="news-content">
+                上班族小確幸！平日午餐來店
+                享小杯啤酒任選一杯，聚會首選 Miu Beer！
+            </span>
+            <span>
+                感受上班的愜意時光，平日午餐特惠來襲！<br>
+                只要來用餐即贈小杯啤酒不限口味一杯 🍺
+                趕快撥打電話訂位<br>
+                貓皇店 03-6666-9466<br>
+                貓后店 03-6666-5966
+            </span>
             <div class="hot"><span>HOT</span></div>
         </div>
         <div class="news-card">
-            <a href="#">
-                <img src="./images/news_craftbeer.png" alt="精釀啤酒">
-                <span>
-                    一起體驗精釀啤酒的奧妙吧!
-                </span>
-                <span>
-                    精釀啤酒小教室開放囉🌞<br>
-                    預約上課了解釀造過程，體驗一日釀酒師生活<br>
-                    趕快撥打電話預約<br>
-                    貓皇店 03-6666-9466<br>
-                    貓后店 03-6666-5966
-                </span>
-            </a>
+            <img src="./images/news_craftbeer.png" alt="精釀啤酒">
+            <span class="news-content">
+                一起體驗精釀啤酒的奧妙吧!
+            </span>
+            <span>
+                精釀啤酒小教室開放囉🌞<br>
+                預約上課了解釀造過程，體驗一日釀酒師生活<br>
+                趕快撥打電話預約<br>
+                貓皇店 03-6666-9466<br>
+                貓后店 03-6666-5966
+            </span>
         </div>
         <div class="news-card">
-            <a href="#">
-                <img src="./images/news_friend.png" alt="好友推薦">
-                <span>
-                    好友揪好友，一起涼一下！
-                </span>
-                <span>
-                    夏日炎炎，揪好友一起來用餐🍻<br>
-                    人數滿四人且當日消費滿兩千即可打九折<br>
-                    趕快撥打電話預約<br>
-                    貓皇店 03-6666-9466<br>
-                    貓后店 03-6666-5966
-                </span>
-            </a>
+            <img src="./images/news_friend.png" alt="好友推薦">
+            <span class="news-content">
+                好友揪好友，一起涼一下！
+            </span>
+            <span>
+                夏日炎炎，揪好友一起來用餐🍻<br>
+                人數滿四人且當日消費滿兩千即可打九折<br>
+                趕快撥打電話預約<br>
+                貓皇店 03-6666-9466<br>
+                貓后店 03-6666-5966
+            </span>
             <div class="new"><span>NEW</span></div>
         </div>
         <div class="news-card">
-            <a href="#">
-                <img src="./images/news_chill.png" alt="商業午餐">
-                <span>
-                    上班辛苦了！<br>平日午間提供商業午餐，一起chill一下！
-                </span>
-                <span>
-                    感受上班的雙人愜意時光，平日午餐特惠來襲！<br>
-                    午間套餐，三菜附兩杯小啤酒只要 688 元 🧡
-                    趕快撥打電話訂位<br>
-                    貓皇店 03-6666-9466<br>
-                    貓后店 03-6666-5966
-                </span>
-            </a>
+            <img src="./images/news_chill.png" alt="商業午餐">
+            <span class="news-content">
+                上班辛苦了！<br>平日午間提供商業午餐，一起chill一下！
+            </span>
+            <span>
+                感受上班的雙人愜意時光，平日午餐特惠來襲！<br>
+                午間套餐，三菜附兩杯小啤酒只要 688 元 🧡
+                趕快撥打電話訂位<br>
+                貓皇店 03-6666-9466<br>
+                貓后店 03-6666-5966
+            </span>
         </div>
         <div class="news-card">
-            <a href="#">
-                <img src="./images/news_beercup.png" alt="啤酒大賽">
-                <span>
-                    每週五晚間八點，參加啤酒大賽，第一名可得啤酒券套票組喲！
-                </span>
-                <span>
-                    啤酒大賽每個月第一個星期五開賽啦👏<br>
-                    冠軍可得兩千元餐券及五張大杯啤酒券！<br>
-                    趕快撥打電話訂位<br>
-                    貓皇店 03-6666-9466<br>
-                    貓后店 03-6666-5966
-                </span>
-            </a>
+            <img src="./images/news_beercup.png" alt="啤酒大賽">
+            <span class="news-content">
+                每週五晚間八點，參加啤酒大賽，第一名可得啤酒券套票組喲！
+            </span>
+            <span>
+                啤酒大賽每個月第一個星期五開賽啦👏<br>
+                冠軍可得兩千元餐券及五張大杯啤酒券！<br>
+                趕快撥打電話訂位<br>
+                貓皇店 03-6666-9466<br>
+                貓后店 03-6666-5966
+            </span>
             <div class="hot"><span>HOT</span></div>
         </div>
         <div class="news-card">
-            <a href="#">
-                <img src="./images/news_beerflower.png" alt="啤酒花">
-                <span>
-                    你知道嗎?啤酒花其實不是花！
-                </span>
-                <span>
-                    啤酒花有獎徵答來啦~<br>
-                    你了解啤酒花嗎? 知道用途嗎?<br>
-                    趕快撥打電話報名有獎徵答，領獎勵😍<br>
-                    貓皇店 03-6666-9466<br>
-                    貓后店 03-6666-5966
-                </span>
-            </a>
+            <img src="./images/news_beerflower.png" alt="啤酒花">
+            <span class="news-content">
+                你知道嗎?啤酒花其實不是花！
+            </span>
+            <span>
+                啤酒花有獎徵答來啦~<br>
+                你了解啤酒花嗎? 知道用途嗎?<br>
+                趕快撥打電話報名有獎徵答，領獎勵😍<br>
+                貓皇店 03-6666-9466<br>
+                貓后店 03-6666-5966
+            </span>
         </div>
     </div>
     <!-- 彈窗用的 -->
