--- a/food.html
+++ b/food.html
@@ -196,45 +196,70 @@
             <a href="#">內用菜單
                 <p>精選菜單</p>
                 <p>無肉不歡拼盤
-                    <i class="fa-solid fa-dollar-sign">990</i>
+                    <i class="fa-solid fa-dollar-sign">
+                        <span>990</span>
+                    </i>
                 </p>
                 <p>德式綜合香腸
-                    <i class="fa-solid fa-dollar-sign">580</i>
+                    <i class="fa-solid fa-dollar-sign">
+                        <span>580</span>
+                    </i>
                 </p>
                 <p>綜合炸物拼盤
-                    <i class="fa-solid fa-dollar-sign">770</i>
+                    <i class="fa-solid fa-dollar-sign">
+                        <span>770</span>
+                    </i>
                 </p>
                 <p>海鮮起司千層
-                    <i class="fa-solid fa-dollar-sign">620</i>
+                    <i class="fa-solid fa-dollar-sign">
+                        <span>620</span>
+                    </i>
                 </p>
                 <p>鄉村雞鴨拼盤
-                    <i class="fa-solid fa-dollar-sign">880</i>
+                    <i class="fa-solid fa-dollar-sign">
+                        <span>880</span>
+                    </i>
                 </p>
                 <p>綜合涼拌海鮮
-                    <i class="fa-solid fa-dollar-sign">440</i>
+                    <i class="fa-solid fa-dollar-sign">
+                        <span>440</span>
+                    </i>
                 </p>
                 <p>經典啤酒組合
-                    <i class="fa-solid fa-dollar-sign">520</i>
+                    <i class="fa-solid fa-dollar-sign">
+                        <span>520</span>
+                    </i>
                 </p>
                 <p>法式洋蔥湯
-                    <i class="fa-solid fa-dollar-sign">220</i>
+                    <i class="fa-solid fa-dollar-sign">
+                        <span>220</span>
+                    </i>
                 </p>
                 <p>招牌披薩
-                    <i class="fa-solid fa-dollar-sign">450</i>
+                    <i class="fa-solid fa-dollar-sign">
+                        <span>450</span>
+                    </i>
                 </p>
                 <p>燉煮小羔羊
-                    <i class="fa-solid fa-dollar-sign">980</i>
+                    <i class="fa-solid fa-dollar-sign">
+                        <span>980</span>
+                    </i>
                 </p>
                 <p>松露薯條
-                    <i class="fa-solid fa-dollar-sign">580</i>
+                    <i class="fa-solid fa-dollar-sign">
+                        <span>580</span>
+                    </i>
                 </p>
                 <p>培根奶油寬麵
-                    <i class="fa-solid fa-dollar-sign">620</i>
+                    <i class="fa-solid fa-dollar-sign">
+                        <span>620</span>
+                    </i>
                 </p>
                 <p>雞肉炒時蔬
-                    <i class="fa-solid fa-dollar-sign">340</i>
+                    <i class="fa-solid fa-dollar-sign">
+                        <span>340</span>
+                    </i>
                 </p>
-
             </a>
         </div>
         <!-- 彈窗用的 -->
