--- a/aboutus.html
+++ b/aboutus.html
@@ -98,7 +98,7 @@
         <video src="./images/about_movie.mp4" autoplay loop muted type="video/mp4" controls
             controlsList="nodownload"></video>
     </div>
-    <section class="container area">
+    <section class="container">
         <div class="slogn">
             <div class="txt">
                 <h1>
